force-app/main/default/objects/Enquiry_Source__c/Enquiry_Source__c.object-meta.xml
<CustomObject>
    <label>Enquiry Source</label>
    <nameField>
        <displayFormat>ES-{0000}</displayFormat>
        <label>Enquiry Source Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enquiry Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>