force-app/main/default/objects/Enquiry_Source__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Enquiry Sources</relationshipLabel>
    <relationshipName>Enquiry_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>