force-app/main/default/objects/Enquiry_Source__c/fields/Campaign_Text__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Text__c</fullName>
    <label>Campaign Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>