force-app/main/default/objects/Enquiry_Source__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <label>Contact Email (Snapshot)</label>
    <type>Email</type>
</CustomField>