force-app/main/default/objects/Enquiry_Source__c/fields/Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Name__c</fullName>
    <label>Contact Last Name (Snapshot)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>