force-app/main/default/objects/Enquiry_Source__c/fields/Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile__c</fullName>
    <label>Contact Mobile (Snapshot)</label>
    <type>Phone</type>
</CustomField>