force-app/main/default/objects/Enquiry_Source__c/fields/CP_Credit_Expiry__c.field-meta.xml
<CustomField>
    <fullName>CP_Credit_Expiry__c</fullName>
    <description>Enquiry Date + 90 days for CP leads</description>
    <label>CP Credit Expiry</label>
    <type>Date</type>
</CustomField>