force-app/main/default/objects/Enquiry_Source__c/fields/Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Type__c</fullName>
    <label>Enquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Re-engaged</fullName>
            </value>
            <value>
                <fullName>Re-opened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>