force-app/main/default/objects/Enquiry_Source__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Enquiry Sources</relationshipLabel>
    <relationshipName>Enquiry_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>