force-app/main/default/objects/Enquiry_Source__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Enquiry Sources</relationshipLabel>
    <relationshipName>Enquiry_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>