force-app/main/default/objects/Enquiry_Source__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Secondary_Mobile__c</columns>
    <columns>Primary_Mobile__c</columns>
    <columns>Project__c</columns>
    <columns>Channel_Partner__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>